update scss to fix snapshot warning overlap

--- a/app/src/sass/crn_app/_dataset.dataset.scss
+++ b/app/src/sass/crn_app/_dataset.dataset.scss
@@ -115,6 +115,10 @@
                     margin-right: 3px;
                 }
             }
+
+            .alert.alert-danger {
+                position: relative;
+            }
         }
 
     }
